Move to service, with lazy loading, bootstrapped editor